@@ -1,3 +1,8 @@
+Wed Mar 05 10:45:52 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
+	* src/dblib/dblib.c src/odbc/prepare_query.c:
+	* src/tds/convert.c src/tds/numeric.c src/tds/query.c:
+	- remove some warnings
+
 Tue Mar 04 17:51:40 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
 	* include/tds.h src/dblib/dblib.c src/tds/convert.c:
 	* src/tds/query.c src/tds/token.c:
